--- a/src/html/popup/popup.html
+++ b/src/html/popup/popup.html
@@ -25,6 +25,10 @@
                 <input type="checkbox" id="hiddenFeature">
                 <label for="hiddenFeature">启用隐藏功能</label>
             </div>
+            <div class="checkbox-container">
+                <input type="checkbox" id="apiMonitorEnabled">
+                <label for="apiMonitorEnabled">显示 API 监控面板</label>
+            </div>
             <h2>Genius 排名分析</h2>
             <div class="checkbox-container">
                 <input type="checkbox" id="geniusCombineTag">
