--- a/src/html/popup/popup.html
+++ b/src/html/popup/popup.html
@@ -41,6 +41,10 @@
             <button type="submit" id="saveBtn" disabled>保存设置</button>
         </form>
 
+        <h2 style="margin-top:16px;text-align:left;">数据分析</h2>
+        <div class="input-group" style="display:flex;gap:8px;flex-wrap:wrap;">
+             <button id="aggregateSharpeBtn" type="button">导出所有sharpe</button>
+        </div>
         <h2 style="margin-top:16px;text-align:left;">社区数据</h2>
         <div class="input-group" style="display:flex;gap:8px;flex-wrap:wrap;">
             <div class="btn-row" style="width:100%">
